# PDFFakeDuplex

./: .gitignore  README.md  pdffake_duplex.py  pyproject.toml
tests/: dev_test.py
